--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,14 @@ addons:
       - cmake
 before_script:
   # Link gcc-7 and g++-7 to their standard commands
-  - ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
-  - ln -s /usr/bin/g++-7 /usr/local/bin/g++
+  - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
+  - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
   # Export CC and CXX to tell cmake which compiler to use
-  - export CC=/usr/bin/gcc-7
-  - export CXX=/usr/bin/g++-7
+  - sudo export CC=/usr/bin/gcc-7
+  - sudo export CXX=/usr/bin/g++-7
   # Check versions of gcc, g++ and cmake
   - gcc -v && g++ -v && cmake --version
   # Run your build commands next
   - cmake
 
-script: make
+script: cmake --build .
