--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ before_script:
   # Check versions of gcc, g++ and cmake
   - gcc -v && g++ -v && cmake --version
   # Run your build commands next
-  - cmake
+  - cmake -G "Unix Makefiles" .
 
 script: cmake --build .
