--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,8 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
  
+sonar.exclusions=CMakeFiles/**
+
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
