--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,24 +14,26 @@ project (AoC-2017)
 
 set(TARGETS2017 1ms 2ms 3ms 4ms 5ms 6ms 7ms 8ms 9ms 11ms 12ms 13ms 15ms 16ms 17ms 18ms 19ms 20ms 21ms 22ms 23ms 24ms 25ms)
 FOREACH(t ${TARGETS2017})
-    add_executable(${t} ${PROJECT_SOURCE_DIR}/2017/${t}/main.cpp)
+    add_executable(${t} ${PROJECT_SOURCE_DIR}/2017/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
     set_target_properties( ${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY 2017/${t}/ )
+    target_include_directories( ${t} PUBLIC ${PROJECT_SOURCE_DIR}/general )
 ENDFOREACH(t)
 
 set(TARGETS2015 day1 day2 day3 day5 day6 day7 day8 day9 day10 day11 day12 day13 day14 day15 day16 day17 day18 day19 day20 day21)
 FOREACH(t ${TARGETS2015})
-    add_executable(${t} ${PROJECT_SOURCE_DIR}/2015/${t}/main.cpp)
+    add_executable(${t} ${PROJECT_SOURCE_DIR}/2015/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
     set_target_properties( ${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY 2015/${t}/ )
+    target_include_directories( ${t} PUBLIC ${PROJECT_SOURCE_DIR}/general )
 ENDFOREACH(t)
 
-add_executable(day4 ${PROJECT_SOURCE_DIR}/2015/day4/main.cpp ${PROJECT_SOURCE_DIR}/general/md5.cpp)
+add_executable(day4 ${PROJECT_SOURCE_DIR}/2015/day4/main.cpp ${PROJECT_SOURCE_DIR}/general/md5.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
 set_target_properties( day4 PROPERTIES RUNTIME_OUTPUT_DIRECTORY 2015/day4/ )
 target_include_directories( day4 PUBLIC ${PROJECT_SOURCE_DIR}/general )
 
-add_executable(10ms ${PROJECT_SOURCE_DIR}/2017/10ms/main.cpp ${PROJECT_SOURCE_DIR}/general/knot.cpp)
+add_executable(10ms ${PROJECT_SOURCE_DIR}/2017/10ms/main.cpp ${PROJECT_SOURCE_DIR}/general/knot.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
 set_target_properties( 10ms PROPERTIES RUNTIME_OUTPUT_DIRECTORY 2017/10ms/ )
 target_include_directories( 10ms PUBLIC ${PROJECT_SOURCE_DIR}/general )
 
-add_executable(14ms ${PROJECT_SOURCE_DIR}/2017/14ms/main.cpp ${PROJECT_SOURCE_DIR}/general/knot.cpp)
+add_executable(14ms ${PROJECT_SOURCE_DIR}/2017/14ms/main.cpp ${PROJECT_SOURCE_DIR}/general/knot.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
 set_target_properties( 14ms PROPERTIES RUNTIME_OUTPUT_DIRECTORY 2017/14ms/ )
 target_include_directories( 14ms PUBLIC ${PROJECT_SOURCE_DIR}/general )
