Removed some small artifacts

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,6 @@ sonar.exclusions=CMakeFiles/**
 #sonar.sourceEncoding=UTF-8
 
 sonar.cfamily.build-wrapper-output=aoc_output
+
+# Number of threads
+sonar.cfamily.threads=4
