Added some stuff to day 1 of 2018

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++17")
 #set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_compile_options("-Wall" "-Wextra" "-Werror" "$<$<CONFIG:RELEASE>:-Ofast>")
+
 include_directories(${PROJECT_SOURCE_DIR}/general)
 
 # adding a project
@@ -14,8 +16,8 @@ project (AoC)
 
 set(TARGETS2018 day01-18)
 FOREACH(t ${TARGETS2018})
+    # add_executable(${t} ${PROJECT_SOURCE_DIR}/2018/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp ${PROJECT_SOURCE_DIR}/general/basetimer.cpp)
     add_executable(${t} ${PROJECT_SOURCE_DIR}/2018/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
-    add_compile_options("-Wall" "-Wextra" "-Werror" "$<$<CONFIG:RELEASE>:-Ofast>")
     set_target_properties( ${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY 2018/${t}/ )
     target_include_directories( ${t} PUBLIC ${PROJECT_SOURCE_DIR}/general )
 ENDFOREACH(t)
