Removed coverage from analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,3 +17,6 @@ sonar.cfamily.build-wrapper-output=aoc_output
 
 # Number of threads
 sonar.cfamily.threads=4
+
+# Ignore coverage
+sonar.coverage.exclusions=**/**
