--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,6 @@ include_directories(${PROJECT_SOURCE_DIR}/general)
 # adding a project
 project (AoC)
 
-set(TARGETSINFI2018 infi01-18)
-FOREACH(t ${TARGETSINFI2018})
-    # add_executable(${t} ${PROJECT_SOURCE_DIR}/infi-aoc2018/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp ${PROJECT_SOURCE_DIR}/general/basetimer.cpp)
-    add_executable(${t} ${PROJECT_SOURCE_DIR}/infi-aoc2018/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
-    set_target_properties( ${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY infi-aoc2018/${t}/ )
-    target_include_directories( ${t} PUBLIC ${PROJECT_SOURCE_DIR}/general )
-ENDFOREACH(t)
-
 set(TARGETS2018 day01-18 day02-18 day03-18 day04-18 day05-18 day06-18 day07-18 day08-18)
 FOREACH(t ${TARGETS2018})
     # add_executable(${t} ${PROJECT_SOURCE_DIR}/2018/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp ${PROJECT_SOURCE_DIR}/general/basetimer.cpp)
@@ -37,7 +29,7 @@ FOREACH(t ${TARGETS2017})
     target_include_directories( ${t} PUBLIC ${PROJECT_SOURCE_DIR}/general )
 ENDFOREACH(t)
 
-set(TARGETS2015 day1 day2 day3 day5 day6 day7 day8 day9 day10 day11 day12 day13 day14 day15 day16 day17 day18 day19 day20 day21)
+set(TARGETS2015 day1 day2 day3 day5 day6 day7 day8 day9 day10 day11 day12 day13 day14 day15 day16 day17 day18 day19 day20 day21 day23)
 FOREACH(t ${TARGETS2015})
     add_executable(${t} ${PROJECT_SOURCE_DIR}/2015/${t}/main.cpp ${PROJECT_SOURCE_DIR}/general/logger.cpp)
     set_target_properties( ${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY 2015/${t}/ )
