Changed the sonar project properties to ignore cimg

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
  
-sonar.exclusions=CMakeFiles/**
+sonar.exclusions=CMakeFiles/**, general/CImg.h
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
