--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day02-19"
+name = "aoc2019"
 version = "0.1.0"
 authors = ["Arno Kamphuis <arno.kamphuis@hu.nl>"]
 edition = "2018"
