--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+order-stat = "0.1"
+md5 = "0.1"
+hex = "0.4.0"
+petgraph = "0.4.13"
