--- a/2016/Cargo.toml
+++ b/2016/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 order-stat = "0.1"
-md5 = "0.1"
+md5 = "0.7.0"
 hex = "0.4.0"
 petgraph = "0.4.13"
+queues = "1.1.0"
