--- a/2016/Cargo.toml
+++ b/2016/Cargo.toml
@@ -12,3 +12,6 @@ md5 = "0.7.0"
 hex = "0.4.0"
 petgraph = "0.4.13"
 queues = "1.1.0"
+itertools = "0.8.2"
+priority-queue = "0.6.0"
+libmath = "0.2.1"
