--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -12,8 +12,9 @@ md5 = "0.1"
 hex = "0.4.0"
 permutohedron = "0.2.4"
 queues = "1.1.0"
-num = "0.2.0"
+num = "^0.3.1"
 png = "0.15.2"
 regex = "1"
 itertools = "^0.9.0"
 petgraph = "0.5.1"
+modinverse = "^0.1.1"
