Created functionality to produce an interactive chart of the running times

--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -18,4 +18,5 @@ regex = "1"
 itertools = "^0.9.0"
 petgraph = "0.5.1"
 modinverse = "^0.1.1"
-plotters = "^0.3.0"
+ruget = "0.4.2"
+plotly = "0.6.0"
