--- a/2015_rust/Cargo.toml
+++ b/2015_rust/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2015"
 
 [dependencies]
 order-stat = "0.1"
-md5 = "0.1"
+md5 = "0.7.0"
 hex = "0.4.0"
 permutohedron = "0.2.4"
 queues = "1.1.0"
 num = "^0.3.1"
 png = "0.15.2"
 regex = "1"
-itertools = "^0.9.0"
+itertools = "0.10.5"
 petgraph = "0.5.1"
 modinverse = "^0.1.1"
 plotly = "0.8.1"
