--- a/2024_rust/Cargo.toml
+++ b/2024_rust/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Arno Kamphuis <arno.kamphuis@hu.nl>"]
 edition = "2021"
 
+[features]
+make_movie = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
